# WaveFunctionCollapse

./: CMakeLists.txt
include/: tilesMap.h
src/: main.cpp  tilesMap.cpp
